@@ -221,4 +221,5 @@
 - Layout: more than just one DockStation can be marked as beeing the parent of maximized Dockables in Common, the interface MaximizeArea has been introduced for that
 - Bugfix: When using the same coordinates in SplitDockGrid twice or more times, an exception occured
 - API: VetoableDockFrontendListener.hiding is now also called when appliying a new layout. The method showing is not called because the elements to show do not yet exist.
-- Bugfix: FlapWindow did not always get the correct size when its parent got resized while the window was invisible. Fixed by Peter. 
+- Bugfix: FlapWindow did not always get the correct size when its parent got resized while the window was invisible. Fixed by Peter.
+- API: CGrid/SplitDockGrid: new method select/setSelected to preselect a CDockable/Dockable in a stack of Dockables. 
